--- a/openmotion-console-v2.ioc
+++ b/openmotion-console-v2.ioc
@@ -66,12 +66,13 @@ Mcu.IP1=CRC
 Mcu.IP10=RCC
 Mcu.IP11=RNG
 Mcu.IP12=SYS
-Mcu.IP13=TIM2
-Mcu.IP14=TIM3
-Mcu.IP15=TIM12
-Mcu.IP16=UART4
-Mcu.IP17=USB_DEVICE
-Mcu.IP18=USB_OTG_FS
+Mcu.IP13=TIM1
+Mcu.IP14=TIM2
+Mcu.IP15=TIM3
+Mcu.IP16=TIM12
+Mcu.IP17=UART4
+Mcu.IP18=USB_DEVICE
+Mcu.IP19=USB_OTG_FS
 Mcu.IP2=DEBUG
 Mcu.IP3=DMA
 Mcu.IP4=FREERTOS
@@ -80,7 +81,7 @@ Mcu.IP6=I2C2
 Mcu.IP7=I2C3
 Mcu.IP8=MEMORYMAP
 Mcu.IP9=NVIC
-Mcu.IPNb=19
+Mcu.IPNb=20
 Mcu.Name=STM32H743VITx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE4
@@ -115,18 +116,19 @@ Mcu.Pin34=VP_CRC_VS_CRC
 Mcu.Pin35=VP_FREERTOS_VS_CMSIS_V2
 Mcu.Pin36=VP_RNG_VS_RNG
 Mcu.Pin37=VP_SYS_VS_tim17
-Mcu.Pin38=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin39=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin38=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin39=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin4=PH1-OSC_OUT (PH1)
-Mcu.Pin40=VP_TIM12_VS_ClockSourceINT
-Mcu.Pin41=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
-Mcu.Pin42=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin40=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin41=VP_TIM12_VS_ClockSourceINT
+Mcu.Pin42=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin43=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin5=PC0
 Mcu.Pin6=PA0
 Mcu.Pin7=PA1
 Mcu.Pin8=PA4
 Mcu.Pin9=PB0
-Mcu.PinsNb=43
+Mcu.PinsNb=44
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H743VITx
@@ -255,8 +257,9 @@ PD13.GPIOParameters=GPIO_Label
 PD13.GPIO_Label=SDA_REM
 PD13.Locked=true
 PD13.Signal=GPIO_Output
-PE11.GPIOParameters=PinState,GPIO_Label
+PE11.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
 PE11.GPIO_Label=FAN2_PWM
+PE11.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PE11.Locked=true
 PE11.PinState=GPIO_PIN_SET
 PE11.Signal=GPIO_Output
@@ -268,8 +271,9 @@ PE4.GPIOParameters=GPIO_Label
 PE4.GPIO_Label=ESTOP2
 PE4.Locked=true
 PE4.Signal=GPIO_Analog
-PE9.GPIOParameters=PinState,GPIO_Label
+PE9.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
 PE9.GPIO_Label=FAN1_PWM
+PE9.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PE9.Locked=true
 PE9.PinState=GPIO_PIN_SET
 PE9.Signal=GPIO_Output
@@ -308,7 +312,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_UART4_Init-UART4-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_I2C3_Init-I2C3-false-HAL-true,8-MX_CRC_Init-CRC-false-HAL-true,9-MX_RNG_Init-RNG-false-HAL-true,10-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,11-MX_TIM2_Init-TIM2-false-HAL-true,12-MX_TIM3_Init-TIM3-false-HAL-true,13-MX_TIM12_Init-TIM12-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_UART4_Init-UART4-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_I2C3_Init-I2C3-false-HAL-true,8-MX_CRC_Init-CRC-false-HAL-true,9-MX_RNG_Init-RNG-false-HAL-true,10-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,11-MX_TIM2_Init-TIM2-false-HAL-true,12-MX_TIM3_Init-TIM3-false-HAL-true,13-MX_TIM12_Init-TIM12-false-HAL-true,14-MX_TIM1_Init-TIM1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=480000000
 RCC.AHB12Freq_Value=120000000
 RCC.AHB4Freq_Value=120000000
@@ -399,6 +403,9 @@ SH.S_TIM3_CH3.0=TIM3_CH3,Input_Capture3_from_TI3
 SH.S_TIM3_CH3.ConfNb=1
 SH.S_TIM3_CH4.0=TIM3_CH4,Input_Capture4_from_TI4
 SH.S_TIM3_CH4.ConfNb=1
+TIM1.IPParameters=Prescaler,Period
+TIM1.Period=10000-1
+TIM1.Prescaler=120-1
 TIM12.IPParameters=Prescaler,Period
 TIM12.Period=25000-1
 TIM12.Prescaler=120-1
@@ -430,6 +437,8 @@ VP_SYS_VS_tim17.Mode=TIM17
 VP_SYS_VS_tim17.Signal=SYS_VS_tim17
 VP_TIM12_VS_ClockSourceINT.Mode=Internal
 VP_TIM12_VS_ClockSourceINT.Signal=TIM12_VS_ClockSourceINT
+VP_TIM1_VS_ClockSourceINT.Mode=Internal
+VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
