--- a/openmotion-console-v2.ioc
+++ b/openmotion-console-v2.ioc
@@ -69,11 +69,13 @@ Mcu.IP12=SYS
 Mcu.IP13=TIM1
 Mcu.IP14=TIM2
 Mcu.IP15=TIM3
-Mcu.IP16=TIM12
-Mcu.IP17=UART4
-Mcu.IP18=USB_DEVICE
-Mcu.IP19=USB_OTG_FS
+Mcu.IP16=TIM4
+Mcu.IP17=TIM5
+Mcu.IP18=TIM12
+Mcu.IP19=UART4
 Mcu.IP2=DEBUG
+Mcu.IP20=USB_DEVICE
+Mcu.IP21=USB_OTG_FS
 Mcu.IP3=DMA
 Mcu.IP4=FREERTOS
 Mcu.IP5=I2C1
@@ -81,7 +83,7 @@ Mcu.IP6=I2C2
 Mcu.IP7=I2C3
 Mcu.IP8=MEMORYMAP
 Mcu.IP9=NVIC
-Mcu.IPNb=20
+Mcu.IPNb=22
 Mcu.Name=STM32H743VITx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE4
@@ -92,43 +94,52 @@ Mcu.Pin12=PE11
 Mcu.Pin13=PE13
 Mcu.Pin14=PB10
 Mcu.Pin15=PB11
-Mcu.Pin16=PB15
-Mcu.Pin17=PD12
-Mcu.Pin18=PD13
-Mcu.Pin19=PC8
+Mcu.Pin16=PB12
+Mcu.Pin17=PB15
+Mcu.Pin18=PD12
+Mcu.Pin19=PD13
 Mcu.Pin2=PC15-OSC32_OUT (OSC32_OUT)
-Mcu.Pin20=PC9
-Mcu.Pin21=PA8
-Mcu.Pin22=PA9
-Mcu.Pin23=PA11
-Mcu.Pin24=PA12
-Mcu.Pin25=PA13 (JTMS/SWDIO)
-Mcu.Pin26=PA14 (JTCK/SWCLK)
-Mcu.Pin27=PC10
-Mcu.Pin28=PC11
-Mcu.Pin29=PC12
+Mcu.Pin20=PC8
+Mcu.Pin21=PC9
+Mcu.Pin22=PA8
+Mcu.Pin23=PA9
+Mcu.Pin24=PA11
+Mcu.Pin25=PA12
+Mcu.Pin26=PA13 (JTMS/SWDIO)
+Mcu.Pin27=PA14 (JTCK/SWCLK)
+Mcu.Pin28=PC10
+Mcu.Pin29=PC11
 Mcu.Pin3=PH0-OSC_IN (PH0)
-Mcu.Pin30=PB6
-Mcu.Pin31=PB7
-Mcu.Pin32=PB8
-Mcu.Pin33=PB9
-Mcu.Pin34=VP_CRC_VS_CRC
-Mcu.Pin35=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin36=VP_RNG_VS_RNG
-Mcu.Pin37=VP_SYS_VS_tim17
-Mcu.Pin38=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin39=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin30=PC12
+Mcu.Pin31=PB6
+Mcu.Pin32=PB7
+Mcu.Pin33=PB8
+Mcu.Pin34=PB9
+Mcu.Pin35=VP_CRC_VS_CRC
+Mcu.Pin36=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin37=VP_RNG_VS_RNG
+Mcu.Pin38=VP_SYS_VS_tim17
+Mcu.Pin39=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin4=PH1-OSC_OUT (PH1)
-Mcu.Pin40=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin41=VP_TIM12_VS_ClockSourceINT
-Mcu.Pin42=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
-Mcu.Pin43=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin40=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin41=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin42=VP_TIM4_VS_ControllerModeTrigger
+Mcu.Pin43=VP_TIM4_VS_ClockSourceITR
+Mcu.Pin44=VP_TIM4_VS_no_output1
+Mcu.Pin45=VP_TIM4_VS_OPM
+Mcu.Pin46=VP_TIM5_VS_ControllerModeTrigger
+Mcu.Pin47=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin48=VP_TIM5_VS_ClockSourceITR
+Mcu.Pin49=VP_TIM5_VS_OPM
 Mcu.Pin5=PC0
+Mcu.Pin50=VP_TIM12_VS_ClockSourceINT
+Mcu.Pin51=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin52=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin6=PA0
 Mcu.Pin7=PA1
 Mcu.Pin8=PA4
 Mcu.Pin9=PB0
-Mcu.PinsNb=44
+Mcu.PinsNb=53
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H743VITx
@@ -154,6 +165,9 @@ NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true\:false
 NVIC.TIM17_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
+NVIC.TIM2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.TIM4_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.TIM5_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.TIM8_BRK_TIM12_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.TimeBase=TIM17_IRQn
 NVIC.TimeBaseIP=TIM17
@@ -166,7 +180,7 @@ PA0.Signal=S_TIM2_CH1_ETR
 PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=LSYNC
 PA1.Locked=true
-PA1.Signal=S_TIM2_CH2
+PA1.Signal=S_TIM5_CH2
 PA11.Locked=true
 PA11.Mode=Device_Only
 PA11.Signal=USB_OTG_FS_DM
@@ -202,6 +216,8 @@ PB10.Signal=I2C2_SCL
 PB11.Locked=true
 PB11.Mode=I2C
 PB11.Signal=I2C2_SDA
+PB12.Locked=true
+PB12.Signal=GPIO_Input
 PB15.GPIOParameters=GPIO_Label
 PB15.GPIO_Label=HUB_RESET
 PB15.Locked=true
@@ -312,7 +328,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_UART4_Init-UART4-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_I2C3_Init-I2C3-false-HAL-true,8-MX_CRC_Init-CRC-false-HAL-true,9-MX_RNG_Init-RNG-false-HAL-true,10-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,11-MX_TIM2_Init-TIM2-false-HAL-true,12-MX_TIM3_Init-TIM3-false-HAL-true,13-MX_TIM12_Init-TIM12-false-HAL-true,14-MX_TIM1_Init-TIM1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_UART4_Init-UART4-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_I2C3_Init-I2C3-false-HAL-true,8-MX_CRC_Init-CRC-false-HAL-true,9-MX_RNG_Init-RNG-false-HAL-true,10-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,11-MX_TIM3_Init-TIM3-false-HAL-true,12-MX_TIM12_Init-TIM12-false-HAL-true,13-MX_TIM1_Init-TIM1-false-HAL-true,14-MX_TIM2_Init-TIM2-false-HAL-true,15-MX_TIM4_Init-TIM4-false-HAL-true,16-MX_TIM5_Init-TIM5-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=480000000
 RCC.AHB12Freq_Value=120000000
 RCC.AHB4Freq_Value=120000000
@@ -397,12 +413,12 @@ RCC.VCOInput2Freq_Value=8000000
 RCC.VCOInput3Freq_Value=8000000
 SH.S_TIM2_CH1_ETR.0=TIM2_CH1,PWM Generation1 CH1
 SH.S_TIM2_CH1_ETR.ConfNb=1
-SH.S_TIM2_CH2.0=TIM2_CH2,PWM Generation2 CH2
-SH.S_TIM2_CH2.ConfNb=1
 SH.S_TIM3_CH3.0=TIM3_CH3,Input_Capture3_from_TI3
 SH.S_TIM3_CH3.ConfNb=1
 SH.S_TIM3_CH4.0=TIM3_CH4,Input_Capture4_from_TI4
 SH.S_TIM3_CH4.ConfNb=1
+SH.S_TIM5_CH2.0=TIM5_CH2,PWM Generation2 CH2
+SH.S_TIM5_CH2.ConfNb=1
 TIM1.IPParameters=Prescaler,Period
 TIM1.Period=10000-1
 TIM1.Prescaler=120-1
@@ -410,11 +426,32 @@ TIM12.IPParameters=Prescaler,Period
 TIM12.Period=25000-1
 TIM12.Prescaler=120-1
 TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM2.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
-TIM2.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2
+TIM2.IPParameters=Prescaler,Period,Channel-PWM Generation1 CH1,Pulse-PWM Generation1 CH1,TIM_MasterOutputTrigger,TIM_MasterSlaveMode
+TIM2.Period=25000-1
+TIM2.Prescaler=120-1
+TIM2.Pulse-PWM\ Generation1\ CH1=1000
+TIM2.TIM_MasterOutputTrigger=TIM_TRGO_OC1REF
+TIM2.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_DISABLE
 TIM3.Channel-Input_Capture3_from_TI3=TIM_CHANNEL_3
 TIM3.Channel-Input_Capture4_from_TI4=TIM_CHANNEL_4
 TIM3.IPParameters=Channel-Input_Capture3_from_TI3,Channel-Input_Capture4_from_TI4
+TIM4.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM4.Channel-PWM\ Generation1\ No\ Output=TIM_CHANNEL_1
+TIM4.IPParameters=Channel-PWM Generation1 No Output,Prescaler,Period,Pulse-PWM Generation1 No Output,TIM_MasterOutputTrigger,TIM_MasterSlaveMode,AutoReloadPreload
+TIM4.Period=50-1
+TIM4.Prescaler=120-1
+TIM4.Pulse-PWM\ Generation1\ No\ Output=25
+TIM4.TIM_MasterOutputTrigger=TIM_TRGO_OC1REF
+TIM4.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_DISABLE
+TIM5.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM5.IPParameters=Prescaler,Period,Channel-PWM Generation2 CH2,Pulse-PWM Generation2 CH2,TIM_MasterOutputTrigger,TIM_MasterSlaveMode,OCMode_PWM-PWM Generation2 CH2,OC2Preload_PWM
+TIM5.OC2Preload_PWM=ENABLE
+TIM5.OCMode_PWM-PWM\ Generation2\ CH2=TIM_OCMODE_PWM2
+TIM5.Period=150-1
+TIM5.Prescaler=120-1
+TIM5.Pulse-PWM\ Generation2\ CH2=50
+TIM5.TIM_MasterOutputTrigger=TIM_TRGO_OC1REF
+TIM5.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_DISABLE
 USB_DEVICE.CLASS_NAME_FS=CDC
 USB_DEVICE.IPParameters=VirtualMode-CDC_FS,VirtualModeFS,CLASS_NAME_FS,VID-CDC_FS,PID_CDC_FS,MANUFACTURER_STRING-CDC_FS,PRODUCT_STRING_CDC_FS
 USB_DEVICE.MANUFACTURER_STRING-CDC_FS=Openwater
@@ -443,6 +480,22 @@ VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
+VP_TIM4_VS_ClockSourceITR.Mode=TriggerSource_ITR1
+VP_TIM4_VS_ClockSourceITR.Signal=TIM4_VS_ClockSourceITR
+VP_TIM4_VS_ControllerModeTrigger.Mode=Trigger Mode
+VP_TIM4_VS_ControllerModeTrigger.Signal=TIM4_VS_ControllerModeTrigger
+VP_TIM4_VS_OPM.Mode=OPM_bit
+VP_TIM4_VS_OPM.Signal=TIM4_VS_OPM
+VP_TIM4_VS_no_output1.Mode=PWM Generation1 No Output
+VP_TIM4_VS_no_output1.Signal=TIM4_VS_no_output1
+VP_TIM5_VS_ClockSourceINT.Mode=Internal
+VP_TIM5_VS_ClockSourceINT.Signal=TIM5_VS_ClockSourceINT
+VP_TIM5_VS_ClockSourceITR.Mode=TriggerSource_ITR3
+VP_TIM5_VS_ClockSourceITR.Signal=TIM5_VS_ClockSourceITR
+VP_TIM5_VS_ControllerModeTrigger.Mode=Trigger Mode
+VP_TIM5_VS_ControllerModeTrigger.Signal=TIM5_VS_ControllerModeTrigger
+VP_TIM5_VS_OPM.Mode=OPM_bit
+VP_TIM5_VS_OPM.Signal=TIM5_VS_OPM
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 board=custom
