--- a/openmotion-console-v2.ioc
+++ b/openmotion-console-v2.ioc
@@ -99,47 +99,49 @@ Mcu.Pin17=PB15
 Mcu.Pin18=PD12
 Mcu.Pin19=PD13
 Mcu.Pin2=PC15-OSC32_OUT (OSC32_OUT)
-Mcu.Pin20=PC8
-Mcu.Pin21=PC9
-Mcu.Pin22=PA8
-Mcu.Pin23=PA9
-Mcu.Pin24=PA11
-Mcu.Pin25=PA12
-Mcu.Pin26=PA13 (JTMS/SWDIO)
-Mcu.Pin27=PA14 (JTCK/SWCLK)
-Mcu.Pin28=PC10
-Mcu.Pin29=PC11
+Mcu.Pin20=PC7
+Mcu.Pin21=PC8
+Mcu.Pin22=PC9
+Mcu.Pin23=PA8
+Mcu.Pin24=PA9
+Mcu.Pin25=PA10
+Mcu.Pin26=PA11
+Mcu.Pin27=PA12
+Mcu.Pin28=PA13 (JTMS/SWDIO)
+Mcu.Pin29=PA14 (JTCK/SWCLK)
 Mcu.Pin3=PH0-OSC_IN (PH0)
-Mcu.Pin30=PC12
-Mcu.Pin31=PB6
-Mcu.Pin32=PB7
-Mcu.Pin33=PB8
-Mcu.Pin34=PB9
-Mcu.Pin35=VP_CRC_VS_CRC
-Mcu.Pin36=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin37=VP_RNG_VS_RNG
-Mcu.Pin38=VP_SYS_VS_tim17
-Mcu.Pin39=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin30=PC10
+Mcu.Pin31=PC11
+Mcu.Pin32=PC12
+Mcu.Pin33=PB6
+Mcu.Pin34=PB7
+Mcu.Pin35=PB8
+Mcu.Pin36=PB9
+Mcu.Pin37=VP_CRC_VS_CRC
+Mcu.Pin38=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin39=VP_RNG_VS_RNG
 Mcu.Pin4=PH1-OSC_OUT (PH1)
-Mcu.Pin40=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin41=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin42=VP_TIM4_VS_ControllerModeTrigger
-Mcu.Pin43=VP_TIM4_VS_ClockSourceITR
-Mcu.Pin44=VP_TIM4_VS_no_output1
-Mcu.Pin45=VP_TIM4_VS_OPM
-Mcu.Pin46=VP_TIM5_VS_ControllerModeTrigger
-Mcu.Pin47=VP_TIM5_VS_ClockSourceINT
-Mcu.Pin48=VP_TIM5_VS_ClockSourceITR
-Mcu.Pin49=VP_TIM5_VS_OPM
+Mcu.Pin40=VP_SYS_VS_tim17
+Mcu.Pin41=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin42=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin43=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin44=VP_TIM4_VS_ControllerModeTrigger
+Mcu.Pin45=VP_TIM4_VS_ClockSourceITR
+Mcu.Pin46=VP_TIM4_VS_no_output1
+Mcu.Pin47=VP_TIM4_VS_OPM
+Mcu.Pin48=VP_TIM5_VS_ControllerModeTrigger
+Mcu.Pin49=VP_TIM5_VS_ClockSourceINT
 Mcu.Pin5=PC0
-Mcu.Pin50=VP_TIM12_VS_ClockSourceINT
-Mcu.Pin51=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
-Mcu.Pin52=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin50=VP_TIM5_VS_ClockSourceITR
+Mcu.Pin51=VP_TIM5_VS_OPM
+Mcu.Pin52=VP_TIM12_VS_ClockSourceINT
+Mcu.Pin53=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin54=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin6=PA0
 Mcu.Pin7=PA1
 Mcu.Pin8=PA4
 Mcu.Pin9=PB0
-Mcu.PinsNb=53
+Mcu.PinsNb=55
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H743VITx
@@ -181,6 +183,10 @@ PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=LSYNC
 PA1.Locked=true
 PA1.Signal=S_TIM5_CH2
+PA10.GPIOParameters=GPIO_Label
+PA10.GPIO_Label=SYNC_IN_EN
+PA10.Locked=true
+PA10.Signal=GPIO_Output
 PA11.Locked=true
 PA11.Mode=Device_Only
 PA11.Signal=USB_OTG_FS_DM
@@ -258,6 +264,12 @@ PC15-OSC32_OUT\ (OSC32_OUT).GPIOParameters=GPIO_Label
 PC15-OSC32_OUT\ (OSC32_OUT).GPIO_Label=IND2
 PC15-OSC32_OUT\ (OSC32_OUT).Locked=true
 PC15-OSC32_OUT\ (OSC32_OUT).Signal=GPIO_Output
+PC7.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
+PC7.GPIO_Label=SYNC_OUT_EN_N
+PC7.GPIO_PuPd=GPIO_PULLDOWN
+PC7.Locked=true
+PC7.PinState=GPIO_PIN_RESET
+PC7.Signal=GPIO_Output
 PC8.GPIOParameters=GPIO_Label
 PC8.GPIO_Label=GPIO0
 PC8.Locked=true
