--- a/openmotion-console-v2.ioc
+++ b/openmotion-console-v2.ioc
@@ -183,9 +183,10 @@ PA13\ (JTMS/SWDIO).Signal=DEBUG_JTMS-SWDIO
 PA14\ (JTCK/SWCLK).Locked=true
 PA14\ (JTCK/SWCLK).Mode=Serial_Wire
 PA14\ (JTCK/SWCLK).Signal=DEBUG_JTCK-SWCLK
-PA2.GPIOParameters=GPIO_Label
+PA2.GPIOParameters=PinState,GPIO_Label
 PA2.GPIO_Label=IO_EXP_RSTN
 PA2.Locked=true
+PA2.PinState=GPIO_PIN_SET
 PA2.Signal=GPIO_Output
 PA3.GPIOParameters=GPIO_Label
 PA3.GPIO_Label=IND1
